--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     
     <header>
     <article>
-     <h1>Biografia de Thomas Bunader   
+     <h1>Biografia de Thomas Bunader  
+      <img  src="Imagen de WhatsApp 2025-08-27 a las 20.11.31_717731ed.jpg" >
+      <p> Esta foto fue en la montaña un día nevado</p>  
     </article>
     </header>
 
