--- a/index.html
+++ b/index.html
@@ -10,14 +10,34 @@
     
     <header>
     <article>
-     <h1>Biografia de Thomas Bunader  
+     <h1>Biografia de Thomas Bunader<h1>  
       <img  src="Imagen de WhatsApp 2025-08-27 a las 20.11.31_717731ed.jpg" >
-       </article>
-    <p> Esta foto fue en la montaña un día nevado</p> 
+     <p>Esta foto fue en la montaña un día nevado</p>
+     <table border="1">
+<caption>DETALLES DE CONTACTO</caption>
+
+<thead>
+<tr>
+<th>email</th>
+<th>telefono</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td>joacooyapura11@gmail.com</td>
+<td>2615790572</td>
+</tr>
+</tbody>
+<tfoot></tfoot>
+</table>
+    </article>
     </header>
 
     <main>
-    
+    <form>
+        <textarea placeholder="Ingrese"></textarea>
+    </form>
     </main>
  
     <footer>
