--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 <tr>
 <th>email</th>
 <th>telefono</th>
+<th>fecha de nacimiento</th>
 </tr>
 </thead>
 
 <tbody>
 <tr>
-<td>joacooyapura11@gmail.com</td>
-<td>2615790572</td>
+<td>tomibunader27@gmail.com</td>
+<td>2615727510</td>
+<td>27/10/2002</td>
 </tr>
 </tbody>
 <tfoot></tfoot>
@@ -35,7 +37,9 @@
     </header>
 
     <main>
-    <form>
+    <br>
+        <form>
+            <h2>Ingresar Datos Personales</h2>
         <textarea placeholder="Ingrese"></textarea>
     </form>
     </main>
