--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
     <br>
         <form>
             <h2>Ingresar Datos Personales</h2>
-        <textarea placeholder="Ingrese"></textarea>
+
+        <textarea placeholder="Ingrese sus datos"></textarea>
+        <br>
+        <input type="text" placeholder="Ingrese Nombre">
+        <input type="email" placeholder="Ingrese email">
+        
     </form>
     </main>
  
